fixed clipped text

--- a/src/block/card/__article-container/card__article-container.css
+++ b/src/block/card/__article-container/card__article-container.css
@@ -5,4 +5,5 @@
   justify-content: space-between;
   box-sizing: border-box;
   height: 304px;
+  text-overflow: ellipsis;
 }
