--- a/src/block/card/__text/card__text.css
+++ b/src/block/card/__text/card__text.css
@@ -5,6 +5,10 @@
   font-size: 16px;
   line-height: 22px;
   color: #1A1B22;
-  margin: 16px 0 auto 0;
+  margin: 0 0 auto 0;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
   overflow: hidden;
 }
