--- a/src/block/card/__tittle/card__tittle.css
+++ b/src/block/card/__tittle/card__tittle.css
@@ -5,5 +5,10 @@
   font-size: 26px;
   line-height: 30px;
   color: #1A1B22;
-  margin: 12px 0 0 0;
+  margin: 12px 0 12px 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
